fixing the pulse z-index effect

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -39,7 +39,7 @@ body {
     font-size: 40px;
     background-color: #1280e060;
     border: 0;
-    z-index: 1;
+    z-index: 99;
     cursor: pointer;
 
 }
@@ -89,7 +89,7 @@ body {
     border-radius: 50%;
     transform: scale(0);
     background-color: rgba(255, 255, 255, 0.089);
-    z-index: -1;
+    z-index: -9;
     animation: pulse 1.4s infinite;
 }
 
@@ -399,13 +399,14 @@ body {
 
 .projectsContainers h2 {
     transition: all 0.6s ease;
-    color: rgb(179, 168, 17);
+    color: white;
 }
 
 
 .projectsContainers p {
     transition: all 0.6s ease;
     text-align: center;
+    color: #ccc;
 }
 
 
